# Allegro-RSP

./: .gitignore  CLAUDE.md  LICENSE  README.md  data_gen.py  get_force_constant.py  get_lattice_constant.py  get_phonon_HfO2.py  get_phonon_NaCl.py  plot.py  pyproject.toml  run_hfo2.sh  run_hfo2_test.sh  run_nacl.sh  run_nacl_test.sh  run_trainer_modify.sh  setup.py  task_hfo2.sh  task_nacl.sh  trainer_modify.py
allegro/: _keys.py
allegro/model/: _ReciprocalNN_allegro_charge_equilibrium.py  __init__.py
allegro/nn/: __init__.py  _allegro.py  _long_range_modules.py
allegro/nn/_strided/: __init__.py  _summations.py
configs/HfO2/: reciprocal_1-step.yaml  reciprocal_3-step.yaml  reciprocal_allegro.yaml
configs/HfO2/test/: reciprocal_defect.yaml  reciprocal_test.yaml
configs/NaCl/: reciprocal_1-step.yaml  reciprocal_3-step.yaml  reciprocal_allegro.yaml
configs/NaCl/test/: reciprocal_defect.yaml  reciprocal_expand.yaml  reciprocal_test.yaml
datasets/HfO2/HfO2/: data-loss_weight.py  data.py
datasets/NaCl/NaCl/: data.py  process-loss_weight.py
datasets/NaCl/test_NaCl/: data.py
datasets/NaCl/test_NaCl-defect/: data.py
nequip/: __init__.py  _version.py
nequip/ase/: nequip_calculator.py
nequip/data/: AtomicData.py  AtomicDataDict.py  __init__.py  _build.py  _keys.py  _test_data.py  dataloader.py  transforms.py
nequip/model/: __init__.py  _build.py  _gmm.py  _grads.py  _pair_potential.py  _scaling.py  _weight_init.py  builder_utils.py
nequip/nn/: __init__.py  _atomwise.py  _concat.py  _convnetlayer.py  _gmm.py  _grad_output.py  _graph_mixin.py  _graph_model.py  _interaction_block.py  _rescale.py  _util.py  pair_potential.py
nequip/scripts/: benchmark.py  deploy.py  evaluate.py  train.py
nequip/train/: _key.py  _loss.py  early_stopping.py  loss.py  metrics.py  trainer.py  trainer_tensorboard.py
nequip/utils/: __init__.py  _global_options.py  auto_init.py  config.py  git.py  gmm.py  misc.py  regressor.py  savenload.py  test.py  versions.py  wandb.py
tests/: conftest.py
tests/integration/: conftest.py  test_deploy.py  test_evaluate.py  test_train.py
tests/model/: test_allegro.py
tests/nn/: test_mlp.py  test_norm_basis.py
(+46 files in other folders)
