[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allegro-rsp"
version = "0.1.0"
description = "Allegro + Reciprocal Space Potential (RSD) extension for NequIP and Allegro."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "The Allegro-RSP Developers"},
]
# nequip and allegro must be pre-installed before running pip install -e .
dependencies = []

[tool.setuptools.packages.find]
# No Python packages to install — setup.py patches installed nequip/allegro via file copy.
include = []

[tool.ruff]
line-length = 88
exclude = [".eggs", "*.egg", "build", "dist", "docs", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E226", "E501", "E741", "E743", "C901", "E203"]
